@@ -268,9 +268,7 @@ def _coerce_types(T1, T2):
 
 def _counts(data):
     # Generate a table of sorted (value, frequency) pairs.
-    if data is None:
-        raise TypeError('None is not iterable')
-    table = collections.Counter(data).most_common()
+    table = collections.Counter(iter(data)).most_common()
     if not table:
         return table
     # Extract the values with the highest frequency.
